<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_parent_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_margin_screen" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_parent_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_margin_screen" />

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/instructions"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/tv_instruction_subtitle"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_instruction_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/on_the_next_screen"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tv_instruction_one"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction" />

        <TextView
            android:id="@+id/tv_instruction_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/click_the_add_button_to_add_a_shoe"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/fab_instruction"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction_subtitle"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/add_a_shoe"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/tv_instruction_two"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_instruction_one"
            app:srcCompat="@drawable/ic_add"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_instruction_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/after_clicking_the_add_button_on_the_next_screen_fill_in_the_shoe_details"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_instruction_three"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@id/fab_instruction"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_instruction_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/then_click_on_add"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/guideline_top_button"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction_two"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top_button"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>