<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Use ConstraintLayout to properly align the different views -->
    <!-- A ViewGroup where elements can be arranged freely, are placed by the system based on constraints -->
    <!-- and may adapt in size based on screen size and orientation. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_parent_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_margin_screen" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_parent_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_margin_screen" />

        <TextView
            android:id="@+id/tv_welcome_text_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:text="@string/welcome_to_shoe_store"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_welcome_text_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/demo_app_to_show_a_shoe_store_and_practice_concepts_learned_in_udacity_lessons"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_text_one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="48dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_text_two"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>