<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainViewModel"
            type="com.udacity.shoestore.presentation.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_parent_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_margin_screen" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_parent_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_margin_screen" />

        <TextView
            android:id="@+id/tv_shoe_detail"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_screen"
            android:gravity="center"
            android:text="@string/shoe_details"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/til_shoe_name"
            app:layout_constraintEnd_toEndOf="@+id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_parent_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_shoe_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:hint="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@id/til_company"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@id/tv_shoe_detail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textAutoCorrect"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@={mainViewModel.shoeName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_company"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/company"
            app:layout_constraintBottom_toTopOf="@id/til_shoe_size"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@id/til_shoe_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textAutoCorrect"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@={mainViewModel.shoeCompany}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_shoe_size"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/shoe_size"
            app:layout_constraintBottom_toTopOf="@id/til_description"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@id/til_company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@={mainViewModel.shoeSize}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/description"
            app:layout_constraintBottom_toTopOf="@id/guideline_top_button"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@id/til_shoe_size">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textAutoCorrect"
                android:selectAllOnFocus="true"
                android:text="@={mainViewModel.shoeDescription}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="@dimen/default_margin_screen"
            android:text="@android:string/cancel"
            android:onClick="@{()-> mainViewModel.onCancel()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/mbt_add_shoe"
            app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbt_add_shoe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="@dimen/default_margin_screen"
            android:text="@string/save"
            android:onClick="@{()-> mainViewModel.addShoe()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
            app:layout_constraintStart_toEndOf="@id/mbt_cancel"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>